--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "clsx": "^2.1.1",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
