타입 체크 설정 추가 ++

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
+    // "allowJs": true,
+    "allowJs": false,
+    // "skipLibCheck": true,
+    "skipLibCheck": false,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
